force-app/main/default/objects/Contact/fields/Churn_Score__c.field-meta.xml
<CustomField>
    <fullName>Churn_Score__c</fullName>
    <label>Churn Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>