force-app/main/default/objects/Contact/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Banking</fullName>
                <default>true</default>
                <label>Personal Banking</label>
            </value>
            <value>
                <fullName>Business Banking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>