force-app/main/default/objects/Contact/fields/Customer_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relationship_Type__c</fullName>
    <label>Customer Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Former Customer</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>