force-app/main/default/objects/Contact/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Co-Owner</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Former Primary</fullName>
            </value>
            <value>
                <fullName>Former Co-Owner</fullName>
            </value>
            <value>
                <fullName>Home Owner</fullName>
                <isActive>false</isActive>
                <label>Home Owner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>