force-app/main/default/objects/Contact/fields/DC_Pred2__c.field-meta.xml
<CustomField>
    <fullName>DC_Pred2__c</fullName>
    <label>DC Pred2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>