force-app/main/default/objects/Contact/fields/DC_Pred__c.field-meta.xml
<CustomField>
    <fullName>DC_Pred__c</fullName>
    <label>DC Pred</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>