force-app/main/default/objects/Contact/fields/DCPrepper__c.field-meta.xml
<CustomField>
    <fullName>DCPrepper__c</fullName>
    <label>DCPrepper</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>