force-app/main/default/objects/Contact/fields/Debt_Service__c.field-meta.xml
<CustomField>
    <fullName>Debt_Service__c</fullName>
    <label>Debt Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>