force-app/main/default/objects/Contact/fields/Delinquent_Status__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the account Delinquent</description>
    <inlineHelpText>Is the account Delinquent?</inlineHelpText>
    <label>Delinquent_Status</label>
    <type>Checkbox</type>
</CustomField>