force-app/main/default/objects/Contact/fields/Foreigner__c.field-meta.xml
<CustomField>
    <fullName>Foreigner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foreigner</label>
    <type>Checkbox</type>
</CustomField>