force-app/main/default/objects/Contact/fields/Home_Branch_Location__c.field-meta.xml
<CustomField>
    <fullName>Home_Branch_Location__c</fullName>
    <label>Home Branch Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>TX</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>