force-app/main/default/objects/Contact/fields/Joined_By_Channel__c.field-meta.xml
<CustomField>
    <fullName>Joined_By_Channel__c</fullName>
    <label>Joined By Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>