force-app/main/default/objects/Contact/fields/Last_Date_As_Primary_Customer__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_As_Primary_Customer__c</fullName>
    <label>Last Date As Primary Customer</label>
    <type>Date</type>
</CustomField>