force-app/main/default/objects/Contact/fields/Parent_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Legal_Entity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Parent Legal Entity</label>
    <type>Checkbox</type>
</CustomField>