force-app/main/default/objects/Contact/fields/Premier_Customer__c.field-meta.xml
<CustomField>
    <fullName>Premier_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premier Customer?</label>
    <type>Checkbox</type>
</CustomField>