force-app/main/default/objects/Contact/fields/Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Address</label>
    <type>Checkbox</type>
</CustomField>