force-app/main/default/objects/Contact/fields/Primary_Customer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Customer</label>
    <type>Checkbox</type>
</CustomField>