force-app/main/default/objects/Contact/fields/Resident_Of_Bank_Country__c.field-meta.xml
<CustomField>
    <fullName>Resident_Of_Bank_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resident Of Bank Country</label>
    <type>Checkbox</type>
</CustomField>