force-app/main/default/objects/Contact/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Deprecated Seg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Personal Banking</fullName>
            </value>
            <value>
                <fullName>Business Banking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>