force-app/main/default/objects/Contact/fields/Segment_Type__c.field-meta.xml
<CustomField>
    <fullName>Segment_Type__c</fullName>
    <label>Segment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
                <default>true</default>
                <label>Personal</label>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>