force-app/main/default/objects/Contact/fields/Spouse_Of_Employee__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Of_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spouse Of Employee</label>
    <type>Checkbox</type>
</CustomField>