force-app/main/default/objects/Contact/fields/Total_Bank_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Total_Bank_Deposits__c</fullName>
    <label>Total Bank Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>