force-app/main/default/objects/Contact/fields/Total_Financial_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Financial_Accounts__c</fullName>
    <label>Total Financial Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>