force-app/main/default/objects/Contact/fields/Total_Outstanding_Credit_Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Credit_Primary_Owner__c</fullName>
    <label>Total Outstanding Credit Primary Owner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>