force-app/main/default/objects/Contact/fields/Total_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Won_Opportunities__c</fullName>
    <label>Total Won Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>